--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,6 @@ assets:
   js_compressor:  uglifier
   css_compressor: sass
   # TODO: change link.
-  baseurl: http://localhost:8000/assets/
-  #baseurl: http://devnook.github.io/updates.html5rocks.com.new/assets/
+  #baseurl: http://localhost:8000/assets/
+  baseurl: http://devnook.github.io/updates.html5rocks.com.new/assets/
   gzip: [ text/css, application/javascript ]
