--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@ description: >
   "Html5 Rocks updates stream."
 baseurl: ""
 # TODO: change link.
-#url: "http://localhost:8000"
-url: "http://devnook.github.io/updates.html5rocks.com.new"
+url: "http://localhost:8000"
+#url: "http://devnook.github.io/updates.html5rocks.com.new"
 html5rocks_url: "http://www.html5rocks.com"
 markdown: kramdown
 permalink: /:year/:month/:title
@@ -21,6 +21,6 @@ assets:
   js_compressor:  uglifier
   css_compressor: sass
   # TODO: change link.
-  #baseurl: http://localhost:8000/assets/
-  baseurl: http://devnook.github.io/updates.html5rocks.com.new/assets/
+  baseurl: http://localhost:8000/assets/
+  #baseurl: http://devnook.github.io/updates.html5rocks.com.new/assets/
   gzip: [ text/css, application/javascript ]
