fixing paginator navigation and tags links

--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,7 @@ paginate: 6
 paginate_path: "/page/:num"
 
 include: [samples]
+exclude: [ "app.yaml", "README.md" ]
 
 gems: [jekyll-assets]
 assets:
