--- a/app.yaml
+++ b/app.yaml
@@ -26,6 +26,12 @@ handlers:
   http_headers:
     Access-Control-Allow-Origin: "*"
 
+- url: /feeds/atom.xml
+  static_files: _site/atom.xml
+  upload: _site/atom.xml
+  http_headers:
+    Access-Control-Allow-Origin: "*"
+
 - url: /assets/(.+)
   static_files: _site/assets/\1
   upload: _site/assets/(.+)
