Use magic G+ account number, not +Name

--- a/_data/_contributors.yaml
+++ b/_data/_contributors.yaml
@@ -560,7 +560,7 @@ samthorogood:
     lat: -33.866674
     lon: 151.195650
   homepage: http://whistlr.info
-  google: +SamThorogood
+  google: 118404069988837396840
   twitter: samthor
   email: thorogood@google.com
   lanyrd: false
