--- a/.travis.yml
+++ b/.travis.yml
@@ -2,18 +2,28 @@ language: ruby
 rvm:
 - 2.2
 
+env:
+  global:
+  - CLOUDSDK_CORE_DISABLE_PROMPTS=1
+  - CLOUDSDK_PYTHON_SITEPACKAGES=1
+  - PROJECT_ID=updaterocker
+  - SRV_ACCOUNT=439900835842-compute@developer.gserviceaccount.com
+
 script: 
   - bundle exec jekyll build
 
 before_install:
   - git submodule update --init --recursive
+  - sudo pip install PyOpenSSL
+#  - openssl aes-256-cbc -K $encrypted_e7fb07691267_key -iv $encrypted_e7fb07691267_iv
+#    -in $PROJECT_ID.p12.enc -out $PROJECT_ID.p12 -d
+  - curl https://sdk.cloud.google.com | bash
+  - $HOME/google-cloud-sdk/bin/gcloud components update app -q
+  - $HOME/google-cloud-sdk/bin/gcloud config set project $PROJECT_ID
+#  - $HOME/google-cloud-sdk/bin/gcloud auth activate-service-account $SRV_ACCOUNT --key-file $PROJECT_ID.p12
 
 # branch whitelist
 branches:
   only:
   - master     # test the master branch
   - development
-
-env:
-  global:
-  - NOKOGIRI_USE_SYSTEM_LIBRARIES=true # speeds up installation of html-proofer
