--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ env:
   - CLOUDSDK_PYTHON_SITEPACKAGES=1
   - PROJECT_ID=updaterocker
   - SRV_ACCOUNT=439900835842-compute@developer.gserviceaccount.com
+  - CURRENT_BRANCH=`git branch | sed -n '/\* /s///p'`
 
 script: 
   - bundle exec jekyll build
@@ -21,6 +22,9 @@ before_install:
   - $HOME/google-cloud-sdk/bin/gcloud components update app -q
   - $HOME/google-cloud-sdk/bin/gcloud config set project $PROJECT_ID
 #  - $HOME/google-cloud-sdk/bin/gcloud auth activate-service-account $SRV_ACCOUNT --key-file $PROJECT_ID.p12
+
+after_success:
+ - $HOME/google-cloud-sdk/bin/gcloud preview app deploy --version $CURRENT_BRANCH .
 
 # branch whitelist
 branches:
