--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ env:
   - CLOUDSDK_CORE_DISABLE_PROMPTS=1
   - CLOUDSDK_PYTHON_SITEPACKAGES=1
   - PROJECT_ID=updaterocker
-  - SRV_ACCOUNT=439900835842-compute@developer.gserviceaccount.com
+  - SRV_ACCOUNT=439900835842-962b8icmhgpo018ksse9g73mamn8ah45@developer.gserviceaccount.com
   - CURRENT_BRANCH=`git branch | sed -n '/\* /s///p'`
 
 script: 
@@ -16,12 +16,11 @@ script:
 before_install:
   - git submodule update --init --recursive
   - sudo pip install PyOpenSSL
-#  - openssl aes-256-cbc -K $encrypted_e7fb07691267_key -iv $encrypted_e7fb07691267_iv
-#    -in $PROJECT_ID.p12.enc -out $PROJECT_ID.p12 -d
+  - openssl aes-256-cbc -K $encrypted_0df239bf1783_key -iv $encrypted_0df239bf1783_iv -in updaterocker-64a8fd695717.p12.enc -out ../updaterocker-64a8fd695717.p12 -d
   - curl https://sdk.cloud.google.com | bash
   - $HOME/google-cloud-sdk/bin/gcloud components update app -q
   - $HOME/google-cloud-sdk/bin/gcloud config set project $PROJECT_ID
-#  - $HOME/google-cloud-sdk/bin/gcloud auth activate-service-account $SRV_ACCOUNT --key-file $PROJECT_ID.p12
+  - $HOME/google-cloud-sdk/bin/gcloud auth activate-service-account $SRV_ACCOUNT --key-file $PROJECT_ID.p12
 
 after_success:
  - $HOME/google-cloud-sdk/bin/gcloud preview app deploy --version $CURRENT_BRANCH .
