--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ script:
 before_install:
   - git submodule update --init --recursive
   - sudo pip install PyOpenSSL
-  - openssl aes-256-cbc -K $encrypted_0df239bf1783_key -iv $encrypted_0df239bf1783_iv -in updaterocker-64a8fd695717.p12.enc -out ../updaterocker-64a8fd695717.p12 -d
+  - openssl aes-256-cbc -K $encrypted_0df239bf1783_key -iv $encrypted_0df239bf1783_iv -in updaterocker-64a8fd695717.p12.enc -out updaterocker-64a8fd695717.p12 -d
   - curl https://sdk.cloud.google.com | bash
   - $HOME/google-cloud-sdk/bin/gcloud components update app -q
   - $HOME/google-cloud-sdk/bin/gcloud config set project $PROJECT_ID
