--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ script:
   - bundle exec jekyll build
 
 before_install:
+  - echo $CURRENT_BRANCH
   - git submodule update --init --recursive
   - sudo pip install PyOpenSSL
   - openssl aes-256-cbc -K $encrypted_0df239bf1783_key -iv $encrypted_0df239bf1783_iv -in $PROJECT_ID.p12.enc -out $PROJECT_ID.p12 -d
@@ -23,7 +24,7 @@ before_install:
   - $HOME/google-cloud-sdk/bin/gcloud auth activate-service-account $SRV_ACCOUNT --key-file $PROJECT_ID.p12
 
 after_success:
- - $HOME/google-cloud-sdk/bin/gcloud preview app deploy --version $CURRENT_BRANCH .
+ - $HOME/google-cloud-sdk/bin/gcloud preview app deploy --version $CURRENT_BRANCH ./app.yaml
 
 # branch whitelist
 branches:
