Update skip files so upload is reduced

--- a/app.yaml
+++ b/app.yaml
@@ -83,5 +83,12 @@ handlers:
   upload: _site/404.html
 
 skip_files:
-  _posts/*
-  *.md
+- ^(.*/)?#.*#$
+- ^(.*/)?.*~$
+- ^(.*/)?.*\.py[co]$
+- ^(.*/)?.*/RCS/.*$
+- ^(.*/)?\..*$
+- ^(.*/)?vendor/*
+- ^(.*/)?_posts/*
+- ^(.*/)?_site/*.md
+- ^(.*/)?*.md
