--- a/app.yaml
+++ b/app.yaml
@@ -88,7 +88,7 @@ skip_files:
 - ^(.*/)?.*\.py[co]$
 - ^(.*/)?.*/RCS/.*$
 - ^(.*/)?\..*$
-- ^(.*/)?vendor/*
-- ^(.*/)?_posts/*
-- ^(.*/)?_site/*.md
-- ^(.*/)?*.md
+- ^(.*/)?vendor/.*$
+- ^(.*/)?_posts/.*$
+- ^(.*/)?_site/*.md$
+- ^(.*/)?*.md$
