new post: DevTools Timeline improvements. Additional fixes to links that are just anchors.

--- a/_data/_contributors.yaml
+++ b/_data/_contributors.yaml
@@ -1483,7 +1483,7 @@ hanseklund:
   twitter: boolhaze
   email: hans@northkingdom.com
 
-pbakaus:
+paulbakaus:
   name:
     given: Paul
     family: Bakaus
