--- a/.travis.yml
+++ b/.travis.yml
@@ -19,12 +19,12 @@ before_install:
   - sudo pip install PyOpenSSL
   - openssl aes-256-cbc -K $encrypted_0df239bf1783_key -iv $encrypted_0df239bf1783_iv -in $PROJECT_ID.p12.enc -out $PROJECT_ID.p12 -d
   - curl https://sdk.cloud.google.com | bash
-  - $HOME/google-cloud-sdk/bin/gcloud components update app -q
+  - $HOME/google-cloud-sdk/bin/gcloud components update gae-python -q
   - $HOME/google-cloud-sdk/bin/gcloud config set project $PROJECT_ID
   - $HOME/google-cloud-sdk/bin/gcloud auth activate-service-account $SRV_ACCOUNT --key-file $PROJECT_ID.p12
 
 after_success:
- - $HOME/google-cloud-sdk/bin/gcloud preview app deploy --version $TRAVIS_BRANCH ./app.yaml
+ - $HOME/google-cloud-sdk/bin/appcfg.py --oauth2 -A $PROJECT_ID -V $TRAVIS_BRANCH update ./app.yaml
 
 # branch whitelist
 branches:
