--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+sudo: false
 language: ruby
 rvm:
 - 2.2
@@ -13,18 +14,16 @@ script:
   - bundle exec jekyll build
 
 before_install:
-  - export CURRENT_BRANCH=git branch
-  - echo $CURRENT_BRANCH
   - git submodule update --init --recursive
-  - sudo pip install PyOpenSSL
-  - openssl aes-256-cbc -K $encrypted_0df239bf1783_key -iv $encrypted_0df239bf1783_iv -in $PROJECT_ID.p12.enc -out $PROJECT_ID.p12 -d
-  - curl https://sdk.cloud.google.com | bash
-  - $HOME/google-cloud-sdk/bin/gcloud components update gae-python -q
-  - $HOME/google-cloud-sdk/bin/gcloud config set project $PROJECT_ID
-  - $HOME/google-cloud-sdk/bin/gcloud auth activate-service-account $SRV_ACCOUNT --key-file $PROJECT_ID.p12
 
 after_success:
- - $HOME/google-cloud-sdk/bin/appcfg.py --oauth2 -A $PROJECT_ID -V $TRAVIS_BRANCH update ./app.yaml
+ - openssl aes-256-cbc -K $encrypted_aa3d0e51e50d_key -iv $encrypted_aa3d0e51e50d_iv -in $PROJECT_ID.json.enc -out $PROJECT_ID.json -d
+ - curl https://sdk.cloud.google.com | bash
+ - $HOME/google-cloud-sdk/bin/gcloud components update app -q
+ - $HOME/google-cloud-sdk/bin/gcloud auth activate-service-account $SRV_ACCOUNT --key-file $PROJECT_ID.json
+ - $HOME/google-cloud-sdk/bin/gcloud config set project $PROJECT_ID
+ - $HOME/google-cloud-sdk/bin/gcloud preview app modules cancel-deployment default --version $TRAVIS_BRANCH
+ - $HOME/google-cloud-sdk/bin/gcloud --verbosity info preview app deploy --version $TRAVIS_BRANCH ./app.yaml
 
 # branch whitelist
 branches:
