--- a/app.yaml
+++ b/app.yaml
@@ -20,15 +20,8 @@ handlers:
   http_headers:
     Access-Control-Allow-Origin: "*"
 
-- url: /feeds/rss.xml
-  mime_type: application/rss+xml
-  static_files: _site/rss.xml
-  upload: _site/rss.xml
-
-- url: /feeds/atom.xml
-  mime_type: application/atom+xml
-  static_files: _site/atom.xml
-  upload: _site/atom.xml
+- url: /feeds/(.*)
+  script: redirect.app
 
 - url: /assets/(.+)
   static_files: _site/assets/\1
